--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content = "IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.1">
   <title>Mushaf Zarrar | Portfolio</title>
 
   <!-- box icons -->
@@ -37,11 +37,11 @@
         <a href="https://www.linkedin.com/in/m-zarrar" target="_blank" rel="noopener noreferrer">
           <i class='bx bxl-linkedin-square'></i>
         </a>
-        <a href="https://github.com/your-github-username" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/MrZarrar" target="_blank" rel="noopener noreferrer">
           <i class='bx bxl-github'></i>
         </a>
       </div>
-      <a href="#" class="btn">Download CV</a>
+      <a href="Mushaf-CV.pdf" class="btn">Download CV</a>
     </div>
 
 
@@ -81,37 +81,37 @@
 
       <div class="skills-box">
         <i class='bx bxl-python' ></i>      <h3>Python</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores aspernatur atque cupiditate, distinctio, eum eveniet exercitationem iusto maxime molestiae molestias nam odit optio quae quibusdam reiciendis repellendus ut vel?</p>
+        <p>I use Python for creating basic scripts, developing mini-games, and completing university projects. Its simplicity and versatility make it ideal for implementing solutions in academic and personal endeavors.</p>
       </div>
 
       <div class="skills-box">
         <i class='bx bxl-postgresql'></i>      <h3>SQL</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores aspernatur atque cupiditate, distinctio, eum eveniet exercitationem iusto maxime molestiae molestias nam odit optio quae quibusdam reiciendis repellendus ut vel?</p>
+        <p>I have experience working with remote databases for group-based projects and am familiar with PostgreSQL. I use SQL to design schemas, perform queries, and ensure efficient data management in collaborative development environments.</p>
       </div>
 
       <div class="skills-box">
         <i class='bx bxl-html5' ></i>
         <h3>HTML</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores aspernatur atque cupiditate, distinctio, eum eveniet exercitationem iusto maxime molestiae molestias nam odit optio quae quibusdam reiciendis repellendus ut vel?</p>
+        <p>I leverage HTML to structure content for websites and web apps. My projects include developing my personal portfolio and the List ‘N’ Go web app, where I focus on creating intuitive and user-friendly layouts.</p>
       </div>
 
       <div class="skills-box">
         <i class='bx bxl-css3' ></i>
         <h3>CSS</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores aspernatur atque cupiditate, distinctio, eum eveniet exercitationem iusto maxime molestiae molestias nam odit optio quae quibusdam reiciendis repellendus ut vel?</p>
+        <p>I apply CSS to style and enhance the visual appeal of websites and apps. Projects like my portfolio and List ‘N’ Go web app demonstrate my ability to create responsive designs that provide a polished user experience.</p>
       </div>
 
       <div class="skills-box">
         <i class='bx bxl-javascript' ></i>
         <h3>JavaScript</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores aspernatur atque cupiditate, distinctio, eum eveniet exercitationem iusto maxime molestiae molestias nam odit optio quae quibusdam reiciendis repellendus ut vel?</p>
+        <p>JavaScript is a key tool in my web development workflow. I use it to add interactivity and functionality to projects, such as my portfolio and the List ‘N’ Go web app, ensuring a seamless and engaging user experience.</p>
       </div>
 
       <div class="skills-container">
         <div class="skills-box">
           <i class='bx bxl-git' ></i>
           <h3>Git</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores aspernatur atque cupiditate, distinctio, eum eveniet exercitationem iusto maxime molestiae molestias nam odit optio quae quibusdam reiciendis repellendus ut vel?</p>
+          <p>I utilize Git for version control, allowing me to track changes and collaborate efficiently in team environments. It has been integral to group projects and shared development work, ensuring smooth integration and progress tracking.</p>
         </div>
       </div>
 
@@ -129,7 +129,7 @@
         <img src="Portfolio Images/Screenshot 2024-11-17 at 00.42.37.png" alt="">
         <div class="portfolio-layer">
           <h4>Digital Portfolio Website</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda cum, dolorum eius, facere in, minus necessitatibus odit reiciendis tenetur vel veritatis. Dicta impedit quibusdam rem voluptas voluptatem. Aliquam, nulla!</p>
+          <p>My digital portfolio highlights my skills and projects as a Computer Science undergraduate. It features a clean and responsive design built with HTML, CSS, and JavaScript. The portfolio includes my latest projects, such as the List ‘N’ Go web app, and links to my professional profiles on LinkedIn and GitHub. It also provides easy access to my CV, reflecting my passion for technology and problem-solving.</p>
         </div>
       </div>
 
@@ -137,15 +137,17 @@
         <img src="Portfolio Images/Screenshot 2024-11-17 at 00.58.22.png" alt="">
         <div class="portfolio-layer">
           <h4>Java Robot</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda cum, dolorum eius, facere in, minus necessitatibus odit reiciendis tenetur vel veritatis. Dicta impedit quibusdam rem voluptas voluptatem. Aliquam, nulla!</p>
+          <p>Designed and built a Lego Mindstorms EV3 robot that autonomously identifies and sorts objects by color using ultrasonic, color, and sound sensors. Led the mechanical design and contributed to programming, focusing on behavior-based control and real-time object detection. This project strengthened my skills in robotics, problem-solving, and teamwork.</p>
         </div>
       </div>
 
       <div class="portfolio-box">
-        <img src="Portfolio Images/Screenshot 2024-11-23 at 18.33.42.png" alt="">
+        <img src="Portfolio Images/Screenshot 2024-11-25 at 23.29.28.png" alt="">
         <div class="portfolio-layer">
-          <h4>List 'N'Go Webapp</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda cum, dolorum eius, facere in, minus necessitatibus odit reiciendis tenetur vel veritatis. Dicta impedit quibusdam rem voluptas voluptatem. Aliquam, nulla!</p>
+          <h4>List 'N' Go Webapp</h4>
+          <p>Developed a user-friendly grocery list app using HTML, CSS, JavaScript, and Node.js (Express), with Playwright for data scraping. The app fetches real-time prices for items added to the list, helping users estimate costs and serving as a convenient checklist. Optimized for both desktop and mobile, it offers a smooth and intuitive experience.
+          </p>
+          <a href="https://list-n-go.com"><i class="bx bx-link-external"></i></a>
         </div>
       </div>
 
