--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content = "IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Mushaf Zarrar | Portfolio</title>
+  <meta name="description" content="Welcome to the portfolio of Mushaf Zarrar, a Computer Science student showcasing projects in web development, robotics, and more. Explore my work and skills." />
+  <meta name="keywords" content="Mushaf Zarrar, student portfolio, computer science, web development, robotics projects, personal website, tech projects" />
+  <meta name="author" content="Mushaf Zarrar" />
 
   <!-- box icons -->
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
