updated CV file name

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <i class='bx bxl-github'></i>
         </a>
       </div>
-      <a href="Mushaf-CV.pdf" class="btn">Download CV</a>
+      <a href="Mushaf CV.pdf" class="btn">Download CV</a>
     </div>
 
 
