added Asset Repo project

--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@
       </div>
 
       <div class="portfolio-box">
-        <img src="Portfolio Images/Screenshot 2024-11-17 at 00.58.22.png" alt="">
+        <img src="Portfolio Images/AssetRepoImage.png" alt="">
         <div class="portfolio-layer">
-          <h4>Java Robot</h4>
-          <p>Designed and built a Lego Mindstorms EV3 robot that autonomously identifies and sorts objects by color using ultrasonic, color, and sound sensors. Led the mechanical design and contributed to programming, focusing on behavior-based control and real-time object detection. This project strengthened my skills in robotics, problem-solving, and teamwork.</p>
+          <h4>Asset Repository Full Stack</h4>
+          <p>A collaborative web app for managing IT and software assets with role-based access and user accounts. Features include metadata tracking, project association, and an AI chatbot for intelligent search and assistance. Built with Svelte, HTML/CSS, and PocketBase.</p>
+          <a href="https://www.youtube.com/watch?v=rGM3N7e14JA"><i class="bx bx-link-external"></i></a>
         </div>
       </div>
 
@@ -102,6 +103,16 @@
           <a href="https://list-n-go.com"><i class="bx bx-link-external"></i></a>
         </div>
       </div>
+
+
+      <div class="portfolio-box">
+        <img src="Portfolio Images/Screenshot 2024-11-17 at 00.58.22.png" alt="">
+        <div class="portfolio-layer">
+          <h4>Java Robot</h4>
+          <p>Designed and built a Lego Mindstorms EV3 robot that autonomously identifies and sorts objects by color using ultrasonic, color, and sound sensors. Led the mechanical design and contributed to programming, focusing on behavior-based control and real-time object detection. This project strengthened my skills in robotics, problem-solving, and teamwork.</p>
+        </div>
+      </div>
+
 
     </div>
 
